--- a/templates/booking/calendar.html.twig
+++ b/templates/booking/calendar.html.twig
@@ -1,23 +1,24 @@
 {# templates/booking/calendar.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <a href="{{ path('booking_new') }}">Create new booking</a>
-
+{% block content %}
     <div id="calendar-holder"></div>
 {% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css">
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@4.1.0/main.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.js"></script>
+
 
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', () => {
