--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+{# templates/admin/home/index.html.twig #}
+{% extends "@UmbrellaAdmin/layout.html.twig" %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+{# symfony crud creates everything in a body block, but umbrella uses a content block. :-( #}
+{% block content %}
+    <h1>content</h1>
+{{ block('body') }}
+{% endblock %}
+
+{% set admin_menu = get_menu('App\\Menu\\AdminMenu', {  }) %}
+
+{% block sidebar %}
+    {{ render_menu(admin_menu, {  }) }}
+{% endblock %}
