--- a/templates/booking/index.html.twig
+++ b/templates/booking/index.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Booking index{% endblock %}
-
-{% block body %}
-    <h1>Booking index</h1>
+{% block content %}
+    <h1>Booking List</h1>
+    <p>
+        Created by Symfony's CRUD maker.
+    </p>
 
     <table class="table">
         <thead>
@@ -35,5 +36,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('booking_new') }}">Create new</a>
+    <a class="btn btn-primary" href="{{ path('booking_new') }}">Create new booking event</a>
 {% endblock %}
