--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -2,8 +2,8 @@
 
 {% block title %}Booking{% endblock %}
 
-{% block body %}
-    <h1>Booking</h1>
+{% block content %}
+    <h1>Booking: {[booking.title }}</h1>
 
     <table class="table">
         <tbody>
@@ -26,9 +26,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('booking_index') }}">back to list</a>
-
-    <a href="{{ path('booking_edit', {'id': booking.id}) }}">edit</a>
-
+    <a class="btn btn-primary" href="{{ path('booking_edit', {'id': booking.id}) }}">edit</a>
     {{ include('booking/_delete_form.html.twig') }}
 {% endblock %}
