some basic entities

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -3,7 +3,11 @@
 
 {% block content %}
 
-    <h1>Calendar Bundle Demo</h1>
+    <h1>UX Demo</h1>
+
+    <div>
+        A playground for some UX tools that we use or may use.
+    </div>
 
     This is a working example of using <a href="https://github.com/tattali/CalendarBundle">CalendarBundle</a>, which integrates events from a database within a Symfony application with <a href="https://fullcalendar.io/">FullCalendar.io</a>.
 
