hacks for testing mmenu

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,4 @@
-body {
-    background-color: lightgray;
-}
+@import "~mmenu-light/dist/mmenu-light.css";
+@import "~mmenu-light/demo/css/demo.css";
+@import "~mmenu-light/demo/css/site.css";
+
