unsuccessful attempt at mmenu and tabler

--- a/templates/booking/index.html.twig
+++ b/templates/booking/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block content %}
+{% block body %}
     <h1>Booking List</h1>
     <p>
         Created by Symfony's CRUD maker.
