--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,4 @@
-{# templates/admin/home/index.html.twig #}
-{% extends "@UmbrellaAdmin/layout.html.twig" %}
+{% extends "@theme/base.html.twig" %}
 
 {% block javascripts %}
 {{ encore_entry_script_tags('app') }}
@@ -13,7 +12,39 @@
 {% endblock %}
 
 
-{% set admin_menu = get_menu('App\\Menu\\AdminMenu', {  }) %}
-{% block sidebar %}
-    {{ render_menu(admin_menu, {  }) }}
+
+{% block knp_sidebar %}
+    {% set menuCode = 'sidebar_menu' %}
+    {% set menuItem = knp_menu_get(menuCode, [],  {
+        'comment': "This is an option passed in knp_menu_get",
+        'menu_code'     : menuCode,
+    }) %}
+
+    {{ debug ? 'DEBUG' }}
+    {#                            todo: OptionsResolver for the theme #}
+    {% set menuHtml = knp_menu_render(menuItem, {
+        "template"      : "@SurvosBase/adminlte/knp_menu.html.twig",
+        "debug": debug|default(false),
+        currentAsLink: true,
+        firstClass: 'f',
+        "currentClass"  : "active",
+        "ancestorClass" : "nav-item menu-open",
+        "branch_class"  : "nav-item",
+        'leaf_class'    : 'nav-item leaf',
+        'link_class'    : 'nav-link',
+        "allow_safe_labels": true,
+        'rootAttributes': {
+            'class': 'nav nav-pills nav-sidebar flex-column',
+            'data-lte-toggle': 'treeview',
+            'data-accordian': 'false',
+            'role': 'menu'
+        },
+
+        'comment': "This is an option passed in knp_menu_render",
+    })
+    %}
+
+
+{#    {% set admin_menu = get_menu('App\\Menu\\AdminMenu', {  }) %}#}
+{#    {{ render_menu(admin_menu, {  }) }}#}
 {% endblock %}
