--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,4 +1,5 @@
 @import "~mmenu-light/dist/mmenu-light.css";
-@import "~mmenu-light/demo/css/demo.css";
-@import "~mmenu-light/demo/css/site.css";
+
+/*@import "~mmenu-light/demo/css/demo.css";*/
+/*@import "~mmenu-light/demo/css/site.css";*/
 
