--- a/templates/app/menu.html.twig
+++ b/templates/app/menu.html.twig
@@ -8,8 +8,8 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about/">About us</a>
             <ul>
-                <li><a href="/about/history/">History</a></li>
-                <li><a href="/about/team/">The team</a></li>
+                <li><a href="/about/history/">Historia</a></li>
+                <li><a href="/about/team/">The Equipo</a></li>
                 <li><a href="/about/address/">Our address</a></li>
             </ul>
         </li>
@@ -18,7 +18,7 @@
 </nav>
 
 
-    {% block stimulus %}
+            {% block stimulus %}
 <h3>MMenu</h3>
 
 
@@ -41,6 +41,7 @@
                     <li><a href="/about/history/">History</a></li>
                     <li><a href="/about/team/">The team</a></li>
                     <li><a href="/about/address/">Our address</a></li>
+                    <li><a href="/about/address/">Testing</a></li>
                 </ul>
             </li>
             <li><a href="/contact/">Contact</a></li>
