--- a/templates/feed/show.html.twig
+++ b/templates/feed/show.html.twig
@@ -2,13 +2,20 @@
 
 {% block body %}
     <h1>Feed: {{ feed.url }}</h1>
-    {{ include('@SurvosWorkflow/_entity_transitions.html.twig', {transition_path: 'feed_transition', flowName: 'feed', flowCode: 'feed', entity: feed}) }}
+    {{ include('@SurvosWorkflow/_entity_transitions.html.twig', {transition_path: 'feed_transition',
+        flowName: 'feed', flowCode: 'feed', entity: feed}) }}
+
+
 
     <table class="table">
         <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ feed.id }}</td>
+            </tr>
+            <tr>
+                <th>Marking</th>
+                <td>{{ feed.marking }}</td>
             </tr>
             <tr>
                 <th>Url</th>
@@ -24,6 +31,8 @@
             </tr>
         </tbody>
     </table>
+
+
 
     <a class="btn btn-primary" href="{{ path('feed_edit', feed.rp) }}">edit</a>
     {{ include('feed/_delete_form.html.twig') }}
