get working, sort of

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,3 +3,4 @@
 /*@import "~mmenu-light/demo/css/demo.css";*/
 /*@import "~mmenu-light/demo/css/site.css";*/
 
+@import "~@fullcalendar/common/main.css";
