--- a/templates/feed/show.html.twig
+++ b/templates/feed/show.html.twig
@@ -1,11 +1,43 @@
 {% extends "feed/base.html.twig" %}
 
-{% block body %}
+    {% block content %}
+
+            {% set _controller = 'fullcalendar' %}
+<div {{ stimulus_controller(_controller, {
+        url: path('fc_load_events'),
+        icsUrl: feed.url,
+        format: 'ics',
+}) }} >
+{#    {#}
+{#    baseUrl: path('fc_load_events'),#}
+{#    url: #}
+{#    extraParams: {#}
+{#    custom_param1: 'something',#}
+{#    custom_param2: 'somethingelse'#}
+{#    },#}
+{#    failure: function() {#}
+{#    alert('there was an error while fetching events!');#}
+{#    },#}
+{#    color: 'yellow',   // a non-ajax option#}
+{#    textColor: 'black' // a non-ajax option#}
+{#    }#}
+
+
+    <div {{ stimulus_target(_controller, 'calendar') }}>
+        calendar here.
+    </div>
+
+    <div {{ stimulus_target(_controller, 'modal') }}
+            class="modal fade"
+            tabindex="-1"
+            aria-hidden="true"
+    >
+    </div>
+</div>
+
     <h1>Feed: {{ feed.url }}</h1>
     {{ include('@SurvosWorkflow/_entity_transitions.html.twig', {transition_path: 'feed_transition',
         flowName: 'feed', flowCode: 'feed', entity: feed}) }}
-
-
 
     <table class="table">
         <tbody>
