--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,25 @@
     {{ parent() }}
 {% endblock %}
 
+        {% block items_container %}
+            {{ parent }}
+            {{ block('feeds') }}
+        {% endblock %}
+
+
+{% block feeds %}
+    <div class="sidebar-cta">
+        <div class="sidebar-cta-content">
+            <strong class="d-inline-block mb-2">Upgrade to Pro</strong>
+            <div class="mb-3 text-sm">
+                Are you looking for more components? Check out our premium version.
+            </div>
+            <div class="d-grid">
+                <a href="upgrade-to-pro.html" class="btn btn-primary">Upgrade to Pro</a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
 
 
 {% block knp_sidebar %}
