--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,6 +1,6 @@
 @import "~mmenu-light/dist/mmenu-light.css";
 
-/*@import "~mmenu-light/demo/css/demo.css";*/
-/*@import "~mmenu-light/demo/css/site.css";*/
+@import "~mmenu-light/demo/css/demo.css";
+@import "~mmenu-light/demo/css/site.css";
 
-@import "~@fullcalendar/common/main.css";
+/*@import "sidebar.css";*/
