remove some older bundles, working but ui is ugly

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,4 @@
-{% extends "@theme/base.html.twig" %}
+{% extends "@SurvosBootstrap/sneat/base.html.twig" %}
 
 {% block javascripts %}
 {{ encore_entry_script_tags('app') }}
