--- a/templates/booking/calendar.html.twig
+++ b/templates/booking/calendar.html.twig
@@ -1,7 +1,7 @@
 {# templates/booking/calendar.html.twig #}
-{% extends '@SurvosBase/bootstrap_shell/base.html.twig' %}
+{% extends "@SurvosBootstrap/sneat/shell.html.twig" %}
 
-{% block body block('content') %}
+{% block body_content block('content') %}
 
 {% block sidebar %}
     <h3>My Calendars</h3>
