--- a/templates/app/bootstrap_collapsible_menu.html.twig
+++ b/templates/app/bootstrap_collapsible_menu.html.twig
@@ -1,4 +1,4 @@
-{% extends "@SurvosBase/bootstrap_shell/base.html.twig" %}
+{#{% extends "@SurvosBase/bootstrap_shell/base.html.twig" %}#}
 {% block javascripts %}
     {{ parent() }}
         {{ encore_entry_script_tags('bootstrap') }}
