--- a/templates/app/stimulus.html.twig
+++ b/templates/app/stimulus.html.twig
@@ -1,5 +1,5 @@
 {# templates/booking/calendar.html.twig #}
-{% extends '@SurvosBase/bootstrap_shell/base.html.twig' %}
+{% extends 'base.html.twig' %}
 {% block sidebar %}
     <h3>My Calendars</h3>
     <h3>Other Calendars</h3>
