--- a/templates/app/menu_testing.html.twig
+++ b/templates/app/menu_testing.html.twig
@@ -11,8 +11,8 @@
     <nav {{ stimulus_target(_menu_controller, 'menu') }}>
 
         {#                            todo: OptionsResolver for the theme #}
+{#        "template"      : "@SurvosBase/adminlte/knp_menu.html.twig",#}
         {% set menuHtml = knp_menu_render(menuItem, {
-            "template"      : "@SurvosBase/adminlte/knp_menu.html.twig",
             "debug": debug|default(false),
             currentAsLink: true,
             firstClass: 'f',
