update api platform

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,4 @@
-{% extends "@SurvosBootstrap/sneat/base.html.twig" %}
+{% extends "@SurvosBootstrap/%s/base.html.twig"|format(theme) %}
 
 {% block javascripts %}
 {{ encore_entry_script_tags('app') }}
